--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -22,18 +22,18 @@
 
 
           <div *ngIf="!editMode" class="form-group row">
-            <label for="reviewsType" class="col-sm-2 col-form-label">Print</label>
+            <!-- <label for="reviewsType" class="col-sm-2 col-form-label">Print</label> -->
             <div class="col-sm-10">
-              <div class="form-check form-check-inline">
+              <!-- <div class="form-check form-check-inline">
                 <input class="form-check-input" name="reviewsType1" type="radio" id="reviewsType2" value="single"
                        [(ngModel)]="printType" />
                 <label class="form-check-label" for="reviewsType2">New Print</label>
-              </div>
-              <div class="form-check form-check-inline">
+              </div> -->
+              <!-- <div class="form-check form-check-inline">
                 <input class="form-check-input" name="reviewsType1" type="radio" id="reviewsType1" value="bulk"
                        [(ngModel)]="printType" />
                 <label class="form-check-label" for="reviewsType1">Existing Print</label>
-              </div>
+              </div> -->
             </div>
           </div>
 
