--- a/VlimsApp/ClientApp/src/app/layout/header/header.component.html
+++ b/VlimsApp/ClientApp/src/app/layout/header/header.component.html
@@ -16,15 +16,15 @@
           </button>
         </div>
 
-        <div class="header-actions">
+        <!-- <div class="header-actions">
 
           <a class="d-block mx-2 fs-m" [routerLink]="'/assigned'"> <i class="bi bi-bell"></i></a>
-        </div>
+        </div> -->
         <div class="d-lg-flex h-100 mx-lg-2 text-white">
           <div class="btn-group user-info-block" dropdown>
             <a id="button-basic" dropdownToggle type="button" class="dropdown-toggle"
                aria-controls="dropdown-basic">
-              <!--<img src="../../../assets/images/user1.png" width="32" height="32" class="rounded-circle mx-2">-->
+              <!-- <img src="../../../assets/images/user1.png" width="32" height="32" class="rounded-circle mx-2"> -->
               <span>{{user}}</span> <span class="caret"></span>
             </a>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
