--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-     
+
       <div class="col d-flex justify-content-between align-items-center">
 
         <h4 class="page-title">{{title}}</h4>
         <div class="back-icon" style="margin-right: 10px;">
-  
+
           <a href="javascript:void(0);" onclick="history.back();">
-  
+
             <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-  
+
           </a>
-  
+
         </div>
-  
+
       </div>
     </div>
   </div>
@@ -23,175 +23,143 @@
       <form (ngSubmit)="addTemplate()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
           <div class="form-group row">
-            <label for="templateName" class="col-sm-2 col-form-label">Template Name <span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="templateName" class="col-sm-2 col-form-label">Template Name <span
+                style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control mw-350"
-                     id="Templatename"
-                     name="Templatename"
-                     placeholder="Template Name"
-                     [(ngModel)]="templateForm.Templatename" [disabled]="editMode"
-                     required
-                     #TemplatenameInput="ngModel" />
-              <div *ngIf="TemplatenameInput.invalid && (TemplatenameInput.dirty || TemplatenameInput.touched)" class="text-danger">
+              <input type="text" class="form-control mw-350" id="Templatename" name="Templatename"
+                placeholder="Template Name" [(ngModel)]="templateForm.Templatename" [disabled]="editMode" required
+                #TemplatenameInput="ngModel" />
+              <div *ngIf="TemplatenameInput.invalid && (TemplatenameInput.dirty || TemplatenameInput.touched)"
+                class="text-danger">
                 Enter Template Name
               </div>
             </div>
           </div>
           <div class="form-group row">
-            <label for="ucode" class="col-sm-2 col-form-label">Unique Code <span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="ucode" class="col-sm-2 col-form-label">Unique Code <span
+                style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control mw-350"
-                     id="ucode"
-                     name="ucode"
-                     placeholder="Enter Prefix"
-                     [(ngModel)]="templateForm.Uniquecode"
-                     readonly
-                     disabled
-                     required
-                     #ucodeInput="ngModel" />
+              <input type="text" class="form-control mw-350" id="ucode" name="ucode" placeholder="Enter Prefix"
+                [(ngModel)]="templateForm.Uniquecode" readonly disabled required #ucodeInput="ngModel" />
 
             </div>
           </div>
           <div class="form-group row">
-            <label for="docType" class="col-sm-2 col-form-label">Document Type <span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="docType" class="col-sm-2 col-form-label">Document Type <span
+                style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select Document Type"
-                          optionLabel="Documenttypename" id="types" name="types" [autoDisplayFirst]="false" [required]="true" #DocumenttypenameInput="ngModel">
+                optionLabel="Documenttypename" id="types" name="types" [autoDisplayFirst]="false" [required]="true"
+                #DocumenttypenameInput="ngModel">
               </p-dropdown>
-              <div *ngIf="!selectedtype && DocumenttypenameInput.invalid && (DocumenttypenameInput.dirty || DocumenttypenameInput.touched)" class="text-danger">
+              <div
+                *ngIf="!selectedtype && DocumenttypenameInput.invalid && (DocumenttypenameInput.dirty || DocumenttypenameInput.touched)"
+                class="text-danger">
                 Document Type is required
               </div>
             </div>
           </div>
           <!--<div class="form-group row">
-    <label for="templateName" class="col-sm-2 col-form-label">No. Of Pages <span style="color: red; font-weight: bolder;">*</span></label>
-    <div class="col-sm-10">
-      <input type="text"
-             class="form-control mw-350"
-             id="noofpages"
-             name="noofpages"
-             placeholder="No. of Pages"
-             [(ngModel)]="templateForm.Pages" [disabled]="editMode"   (change)="generatePages()"
-             required
-               #noofpagesInput="ngModel"
-                />
-                <div *ngIf="noofpagesInput.invalid && (noofpagesInput.dirty || noofpagesInput.touched)" class="text-danger">
-                  Enter No. Of Pages
-                </div>
-    </div>
-  </div>-->
+          <label for="templateName" class="col-sm-2 col-form-label">No. Of Pages <span style="color: red; font-weight: bolder;">*</span></label>
+          <div class="col-sm-10">
+            <input type="text"
+                   class="form-control mw-350"
+                   id="noofpages"
+                   name="noofpages"
+                   placeholder="No. of Pages"
+                   [(ngModel)]="templateForm.Pages" [disabled]="editMode"   (change)="generatePages()"
+                   required
+                     #noofpagesInput="ngModel"
+                      />
+                      <div *ngIf="noofpagesInput.invalid && (noofpagesInput.dirty || noofpagesInput.touched)" class="text-danger">
+                        Enter No. Of Pages
+                      </div>
+          </div>
+        </div>-->
+
+
           <div class="form-group row">
-            <label for="templateName" class="col-sm-2 col-form-label">Format No.<span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="templateName" class="col-sm-2 col-form-label">Format No.<span
+                style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control mw-350"
-                     id="formatno"
-                     name="formatno"
-                     placeholder="Format No."
-                     [(ngModel)]="templateForm.FormatNo"
-                     required
-                     #formatnoInput="ngModel" />
+              <input type="text" class="form-control mw-350" id="formatno" name="formatno" placeholder="Format No."
+                [(ngModel)]="templateForm.FormatNo" required #formatnoInput="ngModel" />
               <div *ngIf="formatnoInput.invalid && (formatnoInput.dirty || formatnoInput.touched)" class="text-danger">
                 Format No.
               </div>
             </div>
           </div>
+
+
+
+
           <div class="form-group row">
-            <label for="templateName" class="col-sm-2 col-form-label">Logo<span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="templateName" class="col-sm-2 col-form-label">Logo</label>
             <div class="col-sm-10" *ngIf="templateForm.header==null || templateForm.header==''">
-              <input type="file"
-                     class="form-control mw-350"
-                     id="file"
-                     (change)="onLogoUpload($event)" accept="image/*" name="file"
-                     ngModel #file="ngModel" required
-                     z />
-              <div *ngIf="file.invalid && (file.dirty || file.touched)" class="text-danger">
-                Logo is required.
-              </div>
+              <input type="file" class="form-control mw-350" id="logoUpload" (change)="onLogoUpload($event)"
+                accept="image/*" z />
             </div>
             <div *ngIf="templateForm.header" class="col-sm-9">
               {{templateForm.header}}
               <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()">Delete</button>
             </div>
-
           </div>
+
+
+
           <div class="form-group row">
             <label for="templateName" class="col-sm-2 col-form-label">Master Logo</label>
             <div class="col-sm-10" *ngIf="templateForm.footer==null || templateForm.footer==''">
-              <input type="file"
-                     class="form-control mw-350"
-                     id="logoUpload"
-                     (change)="onLogoUpload1($event)" accept="image/*"
-                     z />
+              <input type="file" class="form-control mw-350" id="logoUpload" (change)="onLogoUpload1($event)"
+                accept="image/*" z />
             </div>
             <div *ngIf="templateForm.footer" class="col-sm-9">
               {{templateForm.footer}}
               <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile1()">Delete</button>
             </div>
           </div>
-          <div class="form-group row">
-            <label for="title" class="col-sm-2 col-form-label">Title<span style="color: red; font-weight: bolder;">*</span></label>
-            <div class="col-sm-10">
-              <textarea type="a"
-                        class="form-control mw-350"
-                        id="tite"
-                        name="title"
-                        placeholder="Title"
-                        [(ngModel)]="headerData[0][0].inputValue" [disabled]="editMode"
-                        required
-                        #title="ngModel"></textarea>
-              <div *ngIf="title.invalid && (title.dirty || title.touched)" class="text-danger">
-                Enter Template Name
-              </div>
-            </div>
-          </div>
+
+          
         </div>
       </form>
 
-      
-
-
-      <!--<div class="p-4 mt-3 bg-white shadow-dark rounded-2">
-    <h5 class="page-card-title">Title</h5>
-    <div class="template-block">
-      <div class="template-grid">
-        <ng-container *ngIf="showGrid">
-          <table class="w-100">
-            <tbody>
-              <tr *ngFor="let row of headerData; let rowIndex = index">
-                <ng-container *ngFor="let cell of row; let colIndex = index">
-                  <td>
-                    <div class="template-cell">-->
-      <!--<div class="custom-select" style="width: 84px; padding-right: 2px;">
-    <select class="select-dropdown form-select"
-    [(ngModel)]="headerData[rowIndex][colIndex].selectedOption"
-    >
-      <option *ngFor="let option of selectOptions"
-              [value]="option.value">
-        {{ option.name }}
-      </option>
-    </select>
-  </div>-->
-      <!-- <input [(ngModel)]="
-  headerData[rowIndex][colIndex].inputValue
-    " [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
-         class="form-control"
-         type="text" /> -->
-      <!--<textarea class="form-control" style="height: 33px;" [(ngModel)]="headerData[rowIndex][colIndex].inputValue"
-                             [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
-                             ></textarea>
-                    </div>
-                  </td>
-                </ng-container>
-              </tr>
-            </tbody>
-          </table>
-        </ng-container>
+      <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
+        <h5 class="page-card-title">Title</h5>
+        <div class="template-block">
+          <div class="template-grid">
+            <ng-container *ngIf="showGrid">
+              <table class="w-100">
+                <tbody>
+                  <tr *ngFor="let row of headerData; let rowIndex = index">
+                    <ng-container *ngFor="let cell of row; let colIndex = index">
+                      <td>
+                        <div class="template-cell">
+                          <div class="custom-select" style="width: 84px; padding-right: 2px;">
+                            <select class="select-dropdown form-select"
+                              [(ngModel)]="headerData[rowIndex][colIndex].selectedOption">
+                              <option *ngFor="let option of selectOptions" [value]="option.value">
+                                {{ option.name }}
+                              </option>
+                            </select>
+                          </div>
+                          <!-- <input [(ngModel)]="
+                          headerData[rowIndex][colIndex].inputValue
+                            " [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
+                                 class="form-control"
+                                 type="text" /> -->
+                          <textarea class="form-control" style="height: 33px;"
+                            [(ngModel)]="headerData[rowIndex][colIndex].inputValue"
+                            [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"></textarea>
+                        </div>
+                      </td>
+                    </ng-container>
+                  </tr>
+                </tbody>
+              </table>
+            </ng-container>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>-->
       <!-- <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
     <h5 class="page-card-title">Header Template-(4 Col max.)</h5>
     <div class="template-block">
@@ -316,38 +284,41 @@
           <input type="number" min="0" max="10" class="form-control" [(ngModel)]="footerCols" />
         </div>
 
-        <button class="btn btn-default" (click)="generateFooterGrid()">
-          <i class="bi bi-check2"></i>
-        </button>
-      </div>
-    </div>
-  </div> -->
-      <!--
-        <div class="p-4 mt-3 bg-white shadow-dark rounded-2"  *ngIf="!isbody">
-          <h5 class="page-card-title">Header Template</h5>
-          <div class="template-block">
-
-              <form [formGroup]="form1" id="idh">
-                <div formControlName="html1" [ngxSummernote]="config" [(ngModel)]="pages[0].header">
-                </div>
-              </form>
-
+            <button class="btn btn-default" (click)="generateFooterGrid()">
+              <i class="bi bi-check2"></i>
+            </button>
           </div>
         </div>
+      </div> -->
+      <!-- 
+      <div class="p-4 mt-3 bg-white shadow-dark rounded-2"  *ngIf="!isbody">
+        <h5 class="page-card-title">Header Template</h5> 
+        <div class="template-block">
+         
+            <form [formGroup]="form1" id="idh">
+              <div formControlName="html1" [ngxSummernote]="config" [(ngModel)]="pages[0].header">
+              </div>
+            </form> 
+          
+        </div>
+      </div>
 
-        <div class="p-4 mt-3 bg-white shadow-dark rounded-2" *ngIf="!isbody">
-          <h5 class="page-card-title">Footer Template</h5>
-          <div class="template-block">
+      <div class="p-4 mt-3 bg-white shadow-dark rounded-2" *ngIf="!isbody">
+        <h5 class="page-card-title">Footer Template</h5>
+        <div class="template-block">
+         
+            <form [formGroup]="form2" id="idf">
+              <div formControlName="html2" [ngxSummernote]="config" [(ngModel)]="pages[0].footer">
+              </div>
+            </form> 
+         
+        
+          
+        </div>
+      </div> -->
 
-              <form [formGroup]="form2" id="idf">
-                <div formControlName="html2" [ngxSummernote]="config" [(ngModel)]="pages[0].footer">
-                </div>
-              </form>
 
 
-
-          </div>
-        </div> -->
       <!-- <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
       <h5 class="page-card-title">Body Template</h5>
       <div class="template-block">
@@ -370,9 +341,9 @@
             </button>
           </div>
 
+          </div>
         </div>
-      </div>
-  </div> -->
+    </div> -->
 
       <div class="form-group row my-4">
         <div class="col-sm-10 offset-sm-2">
@@ -380,13 +351,17 @@
           <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
 
           <!-- Update Button (visible only in editMode) -->
-          <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid || isButtonDisabled && selectedtype" (click)="addTemplate()">Submit</button>
+          <button type="submit" class="btn btn-primary" *ngIf="!editMode"
+            [disabled]="!fm.form.valid || isButtonDisabled && selectedtype" (click)="addTemplate()">Submit</button>
           <button type="submit" class="btn btn-primary" *ngIf="editMode" (click)="addTemplate()">Update</button>
 
           <!-- Individual Buttons for Approval Actions -->
-          <button type="button" class="col-xs-1 mx-2 btn btn-success" *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="approve()">Approve</button>
-          <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="reinitiative()">Re-Initiative</button>
-          <button type="button" class="col-xs-1 mx-8 offset-sm-1 btn btn-danger" *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="reject()">Reject</button>
+          <button type="button" class="col-xs-1 mx-2 btn btn-success"
+            *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="approve()">Approve</button>
+          <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary"
+            *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="reinitiative()">Re-Initiative</button>
+          <button type="button" class="col-xs-1 mx-8 offset-sm-1 btn btn-danger"
+            *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="reject()">Reject</button>
         </div>
       </div>
 
@@ -394,30 +369,28 @@
       <!-- </form> -->
 
     </div>
-</div>
-<script>
-  $.summernote.dom.walkPoint = (function (_super) {
-        return function () {
-            var startPoint = arguments[0]
-            var endPoint = arguments[1]
-            var handler = arguments[2]
-            var isSkipInnerOffset = arguments[3]
-            let point = startPoint;
+  </div>
+  <script>
+    $.summernote.dom.walkPoint = (function (_super) {
+      return function () {
+        var startPoint = arguments[0]
+        var endPoint = arguments[1]
+        var handler = arguments[2]
+        var isSkipInnerOffset = arguments[3]
+        let point = startPoint;
 
-            while (point) {
-                handler(point);
+        while (point) {
+          handler(point);
 
-                if ($.summernote.dom.isSamePoint(point, endPoint)) {
-                    break;
-                }
-                const isSkipOffset = isSkipInnerOffset &&
-                    startPoint.node !== point.node &&
-                    endPoint.node !== point.node;
-                point = $.summernote.dom.nextPoint(point, isSkipOffset);
-            }
-        };
+          if ($.summernote.dom.isSamePoint(point, endPoint)) {
+            break;
+          }
+          const isSkipOffset = isSkipInnerOffset &&
+            startPoint.node !== point.node &&
+            endPoint.node !== point.node;
+          point = $.summernote.dom.nextPoint(point, isSkipOffset);
+        }
+      };
 
     })($.summernote.dom.walkPoint);
-</script>
-
-
+  </script>
