--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -4,7 +4,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title">My Assignments List</h4>
                
-                <div class="back-icon" style="margin-right: -705px;">
+                <div class="back-icon" style="margin-right: -775px;">
                     <a href="javascript:void(0);" onclick="history.back();">
                         <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
                     </a>
@@ -22,7 +22,7 @@
                       
                     
                 </div>
-            </div>
+            </div>  
         </div>
     </div>
     <div class="row p-2">
@@ -109,6 +109,9 @@
             background-color: white;
             box-shadow: none;
         }
+  ol, ul {
+    padding-left: 0rem !important;
+  }
     </style>
 
 
