--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-        <form #fm1="ngForm">
+        <!--<form #fm1="ngForm">-->
         <div class="p-4 bg-white mt-3 shadow-dark rounded-2">
           <h5 class="page-card-title">Reviewers</h5>
           <div class="form-group row" *ngIf="workflow.reviewsType === 'user'">
@@ -260,7 +260,7 @@
 
           
         </div>
-      </form>
+      <!--</form>-->
         <div class="p-4 bg-white mt-3 shadow-dark rounded-2">
           <h5 class="page-card-title">Approvers</h5>
           <div class="form-group row" *ngIf="workflow.approvalsType === 'user'">
