--- a/VlimsApp/ClientApp/src/app/layout/header/header.component.scss
+++ b/VlimsApp/ClientApp/src/app/layout/header/header.component.scss
@@ -17,7 +17,8 @@ header {
       color: #505050;
       height: 55px;
       display: flex;
-      align-items: center;      
+      align-items: center;  
+      width: 125px;    
     }
   }
 
