--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/functional-profile-add-page/functional-profile-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/functional-profile-add-page/functional-profile-add-page.component.html
@@ -34,14 +34,14 @@
                             </div>
   
                             
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-sm-3">
                                   <strong>Security Management:</strong>
                                 </div>
                                 <div class="col-sm-9">
                                   <input type="checkbox" [checked]="auditConfig.EntityInfo.securityConfig" disabled>
                                 </div>
-                              </div>
+                              </div> -->
   
   
                         
