--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -121,7 +121,7 @@
               <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile1()">Delete</button>
             </div>
           </div>
-          <div class="form-group row">
+          <!-- <div class="form-group row">
             <label for="title" class="col-sm-2 col-form-label">Title<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <textarea type="a"
@@ -136,7 +136,7 @@
                 Enter Title
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
           
 
