--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -120,7 +120,7 @@
 
           <!-- <span style="color: red; font-weight: bolder;">*</span> -->
 
-          <div class="form-group row">
+          <!-- <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label"
               >Department <span style="color: red; font-weight: bolder;">*</span> </label>
             <div class="col-sm-10">
@@ -138,7 +138,11 @@
                 Department is required
               </div>
             </div>
-          </div>
+          </div> -->
+
+
+
+
         </div>
         <form #fm1="ngForm">
         <div class="p-4 bg-white mt-3 shadow-dark rounded-2">
