--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.scss
@@ -11,50 +11,30 @@
 }
 
 
-
-.scrollable-container-horizontal {
-    max-width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
-}
-
-.fixed-card {
-    height: 250px; /* Adjust the height as needed */
-    width: 350px; /* Adjust the width as needed */
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 10px; /* Space between cards */
-    white-space: normal; /* Allow text to wrap inside cards */
-}
-
-.card-body {
-    overflow: hidden;
+.card-group-scroll {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    overflow-x: auto;
+    padding-bottom: 10px;
+
+    .card {
+        flex: 0 0 auto;
+        margin-right: 10px;
+        min-width: 600px; /* Increased min-width for more content space */
+    }
 }
 
 .card-body .row {
-    display: flex;
-    margin-bottom: 10px; /* Adjust spacing between rows */
+    white-space: nowrap;
 }
 
-.card-body .label {
-    width: 35%; /* Fixed width for labels */
-    text-align: right;
-    padding-right: 5px;
-    font-weight: bold;
+.card-body .col-label {
+    flex: 0 0 30%; /* Adjust this value to increase/decrease label column width */
+    max-width: 20%;
 }
 
-.card-body .value {
-    width: 65%; /* Adjust the width to ensure proper alignment */
-    text-align: left;
-    padding-left: 5px;
-    word-wrap: break-word;
+.card-body .col-value {
+    flex: 1 0 80%; /* Adjust this value to increase/decrease value column width */
+    max-width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-
-.bold-status {
-    font-weight: bold;
-}
-
-
