--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-print-new-page/audit-print-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-print-new-page/audit-print-new-page.component.html
@@ -20,13 +20,13 @@
 
               <!-- Initiation Section -->
               <h5 class="section-title">Initiation</h5>
-              <div class="card-group">
-                  <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status !== 'Active'}">
+              <div class="card-group-scroll">
+                  <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status !== 'In-Progress'}">
                       <div class="card-body">
-                          <div class="row">
-                              <div class="col-sm-3"><strong>Version:</strong></div>
-                              <div class="col-sm-9"><strong>{{ i }}</strong></div>
-                          </div>  
+                        <div class="row">
+                            <div class="col-label"><strong>Version:</strong></div>
+                            <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
+                        </div> 
                           <div class="row">
                               <div class="col-sm-3"><strong>Document Title:</strong></div>
                               <div class="col-sm-9">{{ auditConfig.EntityInfo.documenttitle }}</div>
@@ -78,8 +78,8 @@
 
               <!-- Review, Approve, Return, Reject Section -->
               <h5 class="section-title">Review/Approve/Return/Reject</h5>
-              <div class="card-group">
-                  <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status === 'Active'}">
+              <div class="card-group-scroll">
+                  <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status === 'In-Progress'}">
                       <div class="card-body">
                           <div class="row">
                               <div class="col-sm-3"><strong>Document Title:</strong></div>
