--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
@@ -20,40 +20,40 @@
                 <!-- Initiation Section -->
                 <div>
                     <h5 class="section-title">Initiation & Modification</h5>
-                    <div class="card-group">
+                    <div class="card-group-scroll">
                         <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status !== 'In-Progress'}">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Version:</strong></div>
-                                    <div class="col-sm-9"><strong>{{ i }}</strong></div>
+                                    <div class="col-label"><strong>Version:</strong></div>
+                                    <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Document Name:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.documenttype }}</div>
+                                    <div class="col-label"><strong>Document Name:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.documenttype }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Department:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.department }}</div>
+                                    <div class="col-label"><strong>Department:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.department }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Comments:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.Purpose }}</div>
+                                    <div class="col-label"><strong>Comments:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.Purpose }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>WorkFlow:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.Workflow }}</div>
+                                    <div class="col-label"><strong>WorkFlow:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.Workflow }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Requested By:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedBy }}</div>
+                                    <div class="col-label"><strong>Requested By:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.CreatedBy }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Requested On:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</div>
+                                    <div class="col-label"><strong>Requested On:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Status:</strong></div>
-                                    <div class="col-sm-9 bold-status">{{ auditConfig.EntityInfo.Status }}</div>
+                                    <div class="col-label"><strong>Status:</strong></div>
+                                    <div class="col-value bold-status">{{ auditConfig.EntityInfo.Status }}</div>
                                 </div>
                             </div>
                         </div>
@@ -63,52 +63,52 @@
                 <!-- Review, Approve, Return, Reject Section -->
                 <div>
                     <h5 class="section-title">Approval/Return/Reject </h5>
-                    <div class="card-group">
+                    <div class="card-group-scroll">
                         <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status === 'In-Progress'}">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Document Name:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.documenttype }}</div>
+                                    <div class="col-label"><strong>Document Name:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.documenttype }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Department:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.department }}</div>
+                                    <div class="col-label"><strong>Department:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.department }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Comments:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.Purpose }}</div>
+                                    <div class="col-label"><strong>Comments:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.Purpose }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>WorkFlow:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.Workflow }}</div>
+                                    <div class="col-label"><strong>WorkFlow:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.Workflow }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Requested By:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedBy }}</div>
+                                    <div class="col-label"><strong>Requested By:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.CreatedBy }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Requested On:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</div>
+                                    <div class="col-label"><strong>Requested On:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</div>
                                 </div>
                                 <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Reviewed'">
-                                    <div class="col-sm-3"><strong>Reviewed By:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
+                                    <div class="col-label"><strong>Reviewed By:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
                                 </div>
                                 <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Approved'">
-                                    <div class="col-sm-3"><strong>Approved By:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
+                                    <div class="col-label"><strong>Approved By:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
                                 </div>
                                 <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Returned'">
-                                    <div class="col-sm-3"><strong>Returned By:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
+                                    <div class="col-label"><strong>Returned By:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
                                 </div>
                                 <div class="row" *ngIf="auditConfig.EntityInfo.Status === 'Rejected'">
-                                    <div class="col-sm-3"><strong>Rejected By:</strong></div>
-                                    <div class="col-sm-9">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
+                                    <div class="col-label"><strong>Rejected By:</strong></div>
+                                    <div class="col-value">{{ auditConfig.EntityInfo.ModifiedBy }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-3"><strong>Status:</strong></div>
-                                    <div class="col-sm-9 bold-status">{{ auditConfig.EntityInfo.Status }}</div>
+                                    <div class="col-label"><strong>Status:</strong></div>
+                                    <div class="col-value bold-status">{{ auditConfig.EntityInfo.Status }}</div>
                                 </div>
                             </div>
                         </div>
