--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -74,7 +74,7 @@
           <div class="form-group row">
             <label for="document" class="col-sm-2 col-form-label">Document</label>
             <div class="col-sm-10">
-              <a class="link-opacity-100-hover" (click)="viewprint(viewdoc)" href="javascript:void(0)">View Document</a>
+              <a class="link-opacity-100-hover" (click)="viewprint(template)" href="javascript:void(0)">View Document</a>
             </div>
           </div>
 
@@ -251,7 +251,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="modalRef!.hide()">Close</button>
-        <button type="button" class="btn btn-success" (click)="previewtemplate(template,viewdoc)">Submit</button>
+        <button type="button" class="btn btn-success" (click)="previewtemplate(template)">Submit</button>
       </div>
     </div>
   <!-- </div> -->
