--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
@@ -135,7 +135,7 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="documentMasterHeader">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#documentMasterCollapse" aria-expanded="true" aria-controls="documentMasterCollapse">
-            <span style="font-weight: bold; color: #333;">Hirearchy Management</span>
+            <span style="font-weight: bold; color: #333;">Hierarchy Management</span>
           </button>
         </h2>
         <div id="documentMasterCollapse" class="accordion-collapse collapse show" aria-labelledby="documentMasterHeader" data-bs-parent="#documentMasterAccordion">
