--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Activate-deactivate-user/activate-deactivateuser.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Activate-deactivate-user/activate-deactivateuser.component.html
@@ -29,7 +29,7 @@
           <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table #templatesTable
              [value]="types" 
-             [globalFilterFields]="['UserID', 'UserID', 'Role','Department','Status','RegisteredOn']"
+             [globalFilterFields]="['UserID', 'UserID', 'Role','Department','Status','Doj']"
              tableStyleClass="table table-striped" [rows]="itemsPerPage"
              [paginator]="true" [totalRecords]="types.length"
              [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
@@ -41,7 +41,7 @@
                   <th pSortableColumn="UserId" style="width:15%">User ID</th>
                   <th pSortableColumn="Role" style="width:20%">Role<p-sortIcon field="Role"></p-sortIcon></th>
                   <th pSortableColumn="Department" style="width:200px">Department <p-sortIcon field="Department"></p-sortIcon></th>
-                  <th pSortableColumn="RegisteredOn" style="width:200px">Registered On <p-sortIcon field="RegisteredOn"></p-sortIcon></th>
+                  <th pSortableColumn="Doj" style="width:200px">Registered On <p-sortIcon field="Doj"></p-sortIcon></th>
                   <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
                   <th style="width:80px">Actions</th>
     
