--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -41,7 +41,7 @@
 
           
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Document Type sachin <span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="prefix" class="col-sm-2 col-form-label">Document Type Prefix <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
