--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
@@ -21,7 +21,7 @@
           </div>
           <div class="form-group row">
             <label for="newPassword" class="col-sm-2 col-form-label">New
-              Password:{{securityType.MinimumPasswordLength}}<span style="color: red; font-weight: bolder;">*</span></label>
+              Password:<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-3">
               <input type="password" id="newPassword" name="newPassword" class="form-control" [(ngModel)]="newPassword"
                 minlength="{{securityType.MinimumPasswordLength}}" 
