Changes of issues

--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -4,7 +4,7 @@
 
       <div class="col d-flex justify-content-between align-items-center">
 
-        <h4 class="page-title">{{title}}</h4>
+        <h4 class="page-title" *ngIf="title12 != undefined">{{title12}}</h4>
         <div class="back-icon" style="margin-right: 10px;">
 
           <a href="javascript:void(0);" onclick="history.back();">
