--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -51,7 +51,7 @@
               <td>{{doc?.printtype}}</td>
               <td>{{doc?.documenttitle}}</td>
               <td>{{doc?.documentNumber}}</td>
-              <td>{{doc?.modifiedBy}}</td>
+              <td>{{doc?.createdBy}}</td>
               <td class="text-center">{{doc?.noofcopies}}</td>
               <td class="text-center">{{doc?.printCount}}</td>
               <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td>
