--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -42,7 +42,7 @@
                             <!-- <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th> -->
                             <th pSortableColumn="initiatedBy" >Initiated By</th>
                             <th pSortableColumn="InitiatedOn" >Initiated On<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
-                            <th pSortableColumn="InitiatedOn" >Assigned Type</th>
+                            <th >Assigned Type</th>
                             <th pSortableColumn="Status" >Status<p-sortIcon field="Status"></p-sortIcon></th>
                             <!-- <th pSortableColumn="InitiatedOn" style="width:200px">Due Date<p-sortIcon field="InitiatedOn"></p-sortIcon></th> -->
     
