--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
@@ -36,7 +36,7 @@
                                     <div class="col-value">{{ auditConfig.EntityInfo.department }}</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-label"><strong>Comments:</strong></div>
+                                    <div class="col-label"><strong>Purpose:</strong></div>
                                     <div class="col-value">{{ auditConfig.EntityInfo.Purpose }}</div>
                                 </div>
                                 <div class="row">
