--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -52,7 +52,7 @@
         </div>
         
         <div class="form-group row">
-          <label for="lastname" class="col-sm-2 col-form-label">Last Name<span style="color: red; font-weight: bolder;">*</span></label>
+          <label for="lastname" class="col-sm-2 col-form-label">Last Name</label>
           <div class="col-sm-10">
               <input type="text"
                      class="form-control"
@@ -63,7 +63,7 @@
                      [(ngModel)]="adduser.LastName"
                      (ngModelChange)="calculateTotalUsers()" 
                      [disabled]="editMode" 
-                     required
+                     
                      pattern="[A-Za-z ]*"
                      #lastnameInput="ngModel"/>
               <div *ngIf="lastnameInput.invalid && (lastnameInput.dirty || lastnameInput.touched)" class="text-danger">
