--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-preparation-new-page/audit-preparation-new-page.component.html
@@ -128,6 +128,10 @@
                       <div class="card mb-3" *ngFor="let auditConfig of types; let i = index" [ngClass]="{'d-none': auditConfig.EntityInfo.Status === 'IN-PROGRESS'}">
                           <div class="card-body">
                             <div class="row">
+                              <div class="row">
+                                <div class="col-label"><strong>Version:</strong></div>
+                                <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
+                            </div>
                               <div class="col-sm-3">
                                 <strong>Document Title:</strong>
                               </div>
@@ -246,7 +250,11 @@
                                 {{ auditConfig.EntityInfo.ModifiedBy }}
                             </div>
                         </div>
-                             
+                        <div class="row">
+                          <div class="col-label"><strong>Reason(s):</strong></div>
+                          <div class="col-value">{{ auditConfig.EntityInfo.reason }}</div>
+                      </div>
+                     
               
                               <div class="row">
                                   <div class="col-sm-3"><strong>Status:</strong></div>
