--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/auditadminhome/auditadminhome.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/auditadminhome/auditadminhome.component.scss
@@ -1,10 +1,7 @@
 .card {
   border: none;
   background: linear-gradient(313deg, #3f51b5, #2196f3);
-  background: linear-gradient(90deg, var(--c1, #111111), var(--c2, #2196f3) 51%, var(--c1, #0d0f10)) var(--x, 0)/ 200%;
-
-  
-
+  background: linear-gradient(90deg, var(--c1, #3f51b5), var(--c2, #2196f3) 51%, var(--c1, #4dafff)) var(--x, 0)/ 200%;
   min-width: 240px;
   min-height: 200px;
   color: #dae7ff;
@@ -54,15 +51,3 @@
 a{
   cursor: pointer;
 }
-
-
-.custom-back-icon a {
-  background: linear-gradient(90deg, rgb(11, 8, 8), rgb(59, 155, 245));   /* Set linear gradient background from purple to blue */
-  -webkit-background-clip: text; /* Clip text to the background shape */
-  background-clip: text; /* Clip text to the background shape */
-  color: transparent; /* Make the text transparent */
-  display: inline-block; /* Ensure proper rendering */
-}
-
-
-
