--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.html
@@ -14,14 +14,16 @@
   <div class="row mt-3">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
+        <div class="card-group-scroll">
         <div *ngFor="let auditConfig of types; let i = index">
           <div class="card mb-3">
             <div class="card-body">
               
               <div class="row">
-                <div class="col-sm-3">
-                    <strong>Version {{ i + 0 }}</strong>
-                </div>
+                <div class="row">
+                  <div class="col-label"><strong>Version:</strong></div>
+                  <div class="col-value"><strong>{{ i | number:'2.0' }}</strong></div>
+              </div>
             </div>
               
 
@@ -105,6 +107,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
