--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.scss
@@ -1,18 +1,40 @@
-.bold-text {
-    font-weight: bold;
-  }
-  
-  .changed-property {
-    background-color: #ffe6b3; /* Light yellow background color */
-    /* or you can use border color */
-    /* border: 1px solid #ffcc00; /* Yellow border */
-  }
-  
+.card-body {
+  padding: 10px;
+}
+.row {
+  margin-bottom: 5px;
+}
+.section-title {
+  margin-top: 20px;
+  font-weight: 500;
+  text-align: center; // Center align the text
+}
 
-  .custom-back-icon a {
-    background: linear-gradient(90deg, rgb(11, 8, 8), rgb(59, 155, 245));  /* Set linear gradient background from purple to blue */
-    -webkit-background-clip: text; /* Clip text to the background shape */
-    background-clip: text; /* Clip text to the background shape */
-    color: transparent; /* Make the text transparent */
-    display: inline-block; /* Ensure proper rendering */
+
+.card-group-scroll {
+  display: flex;
+  overflow-x: auto;
+  padding-bottom: 10px;
+
+  .card {
+      flex: 0 0 auto;
+      margin-right: 10px;
+      min-width: 600px; /* Increased min-width for more content space */
   }
+}
+
+.card-body .row {
+  white-space: nowrap;
+}
+
+.card-body .col-label {
+  flex: 0 0 30%; /* Adjust this value to increase/decrease label column width */
+  max-width: 20%;
+}
+
+.card-body .col-value {
+  flex: 1 0 80%; /* Adjust this value to increase/decrease value column width */
+  max-width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
